TASK-6: remove typescript experiments, add hoc usage, refactor and separate code, add notification when all items were loaded, change legacy sprites into more suitable one, optimize render methods onScroll

--- a/src/Components/PokemonList/pokemonItem.module.scss
+++ b/src/Components/PokemonList/pokemonItem.module.scss
@@ -1,8 +1,9 @@
 .pokemonItemWrapper {
- display: flex;
- img {
-    height: 100px;
- }
+    display: flex;
+    justify-content: flex-start;
+    img {
+        height: 100px;
+    }
 }
 .pokemonItemName {
     font-weight: 500;
