--- a/src/Components/Navbar/navbar.module.scss
+++ b/src/Components/Navbar/navbar.module.scss
@@ -1,7 +1,7 @@
 .navbarContainer {
     position: absolute;
     top: 0;
-    margin: 0 calc(50% - 100px);
+    margin: 0 calc(50% - 10.54%);
 }
 
 .navbar {
@@ -10,8 +10,19 @@
 }
 
 .navbarLink {
-    white-space: nowrap;
-    margin-left: 12px;
-    text-decoration: none;
     list-style-type: none;
+    a {
+        position: relative;
+        display: table-cell;
+        text-align: center;
+        color: #292929;
+        text-decoration: none;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+            sans-serif;
+        font-weight: 500;
+        padding: 10px 20px;
+        transition: 0.2s ease color;
+        white-space: nowrap;
+        text-decoration: none;
+    }
 }
