--- a/src/Components/PageCaption/pageCaption.module.scss
+++ b/src/Components/PageCaption/pageCaption.module.scss
@@ -1,5 +1,9 @@
 .pageCaption {
+    margin: 1% 3%;
     position: relative;
     width: 200px;
     height: 200px;
+    img {
+        width: 300px;
+    }
 }
