TASK-7: navBar refactor, add colorScheme function and some basic colors, changed displaying mode

--- a/src/Components/PokemonList/pokemonItem.module.scss
+++ b/src/Components/PokemonList/pokemonItem.module.scss
@@ -1,6 +1,8 @@
 .pokemonItemWrapper {
     display: flex;
     justify-content: flex-start;
+    flex-shrink: 2;
+    width: 50%;
     img {
         height: 100px;
     }
