--- a/src/Components/PokemonList/pokemonList.module.scss
+++ b/src/Components/PokemonList/pokemonList.module.scss
@@ -1,7 +1,11 @@
 .pokemonList {
     margin-top: 50px;
     display: flex;
-    flex-direction: column;
     width: 100%;
-    align-items: center;
+    margin-left: 100px;
+}
+
+.wrapperPokemonList {
+    display: flex;
+    flex-wrap: wrap;
 }
