--- a/src/Components/Navbar/navbar.module.scss
+++ b/src/Components/Navbar/navbar.module.scss
@@ -1,12 +1,22 @@
 .navbarContainer {
     position: absolute;
-    top: 0;
-    margin: 0 calc(50% - 10.54%);
+    top: -20px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    &.fixed {
+        top: -20px;
+        position: fixed;
+    }
 }
 
 .navbar {
+    background-color: lightgray;
     display: flex;
-    padding: 0;
+    width: 100%;
+    justify-content: center;
+    padding: 10px 0;
+    box-shadow: 0 4px 10px rgba(59, 59, 59, 0.5);
 }
 
 .navbarLink {
