--- a/src/Components/Navbar/navbar.module.scss
+++ b/src/Components/Navbar/navbar.module.scss
@@ -1,13 +1,8 @@
+@import "./../../sass/variables.scss";
 .navbarContainer {
-    position: absolute;
-    top: -20px;
     display: flex;
     width: 100%;
     justify-content: center;
-    &.fixed {
-        top: -20px;
-        position: fixed;
-    }
 }
 
 .navbar {
@@ -16,7 +11,8 @@
     width: 100%;
     justify-content: center;
     padding: 10px 0;
-    box-shadow: 0 4px 10px rgba(59, 59, 59, 0.5);
+    box-shadow: 0 4px 10px map-deep-get($currentTheme, "secondary", "box-shadow");
+    margin: 0;
 }
 
 .navbarLink {
@@ -25,7 +21,7 @@
         position: relative;
         display: table-cell;
         text-align: center;
-        color: #292929;
+        color: map-deep-get($currentTheme, "primary", "text");
         text-decoration: none;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
             sans-serif;
