--- a/src/Components/PokemonList/pokemonList.module.scss
+++ b/src/Components/PokemonList/pokemonList.module.scss
@@ -1,11 +1,18 @@
 .pokemonList {
-    margin-top: 50px;
+    margin: 50px auto 0 auto;
     display: flex;
     width: 100%;
-    margin-left: 100px;
+    justify-content: center;
+    overflow-y: auto;
 }
 
-.wrapperPokemonList {
+.wrapperPokemonItems {
     display: flex;
     flex-wrap: wrap;
+    width: 50%;
+    justify-content: center;
+    a {
+        color: unset;
+        text-decoration: none;
+    }
 }
